# aoc

./: .gitignore  Cargo.toml  README.md  crates.js  help.html  index.html  settings.html  src-files.js
accumulative-hash/: Cargo.toml  README.md
accumulative_hash/: all.html  index.html  sidebar-items.js  struct.AccumulativeHash.html  struct.AtomicAccumulativeHash.html  trait.IsAccumulativeHashType.html  trait.IsAtomicAccumulativeHashType.html
aoc-2025-01/: README.md
aoc-2025-02/: Cargo.toml  README.md
aoc-2025-02-c/: .gitignore  Makefile  README.md  func.c  main.c  parse.c  types.c
aoc-2025-02/src/: input.rs  main.rs
aoc-2025-03/: README.md
aoc-2025-03-c/: Makefile  README.md  func.c  main.c  parse.c  types.c
aoc-2025-03-zig/: build.zig  build.zig.zon
aoc-2025-04/: README.md  test_main.py
aoc-2025-05/: Cargo.toml  README.md
aoc-2025-05-c/: Makefile  common.h  compare.c  compare.h  consolidate.c  consolidate.h  func.c  func.h  main.c  parse.c  parse.h  range.c  range.h  tests.c  types.h  utils.c  utils.h
aoc-2025-06/: Cargo.toml  README.md
aoc-2025-07/: Cargo.toml  README.md
aoc-2025-08/: Cargo.toml  README.md
aoc-2025-09/: Cargo.toml  README.md
aoc-2025-10/: Cargo.toml  README.md
aoc-2025-10-c/: Makefile  README.md  main.c  tests.c
aoc-2025-10/src/: input.rs  main.rs
aoc-2025-10/src/models/: button.rs  combination.rs  count_array.rs  difference.rs  indicators.rs  joltage.rs  machine.rs  mod.rs
aoc-2025-11/: Cargo.toml  README.md
aoc-2025-11/src/: input.rs  main.rs  models.rs  parse.rs
aoc-2025-12/: Cargo.toml  README.md
aoc-2025-12/src/: _test.rs  input.rs  main.rs  progress.rs  solve.rs
aoc-2025-12/src/models/: container.rs  helpers.rs  mod.rs  parse.rs  placement.rs  requirement.rs  shape.rs  types.rs
aoc_2025_01/: all.html  fn.instructions_from_string.html  fn.main.html  index.html  sidebar-items.js  struct.Wheel.html
aoc_2025_02/: all.html  constant.PRIMES.html  fn.generate_mask.html  fn.main.html  fn.split_input_into_iterables.html  index.html  sidebar-items.js  static.GLOBAL.html  (+2 more)
(+970 files in other folders)
